--- a/index.html
+++ b/index.html
@@ -1,65 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Galería · pauleal · ArtStation</title>
   <style>
-    :root{
-      --bg: #0b0c10;
-      --card: #111218;
-      --muted: #8a8f98;
-      --text: #e6e8eb;
-      --accent: #6be675;
-      --ring: #2a2e35;
-    }
-    *{box-sizing: border-box}
-    body{margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial; background: var(--bg); color: var(--text)}
-    header{
-      position: sticky; top:0; z-index: 10;
-      backdrop-filter: blur(8px);
-      background: color-mix(in oklab, var(--bg) 85%, #000 15% / 60%);
-      border-bottom: 1px solid var(--ring);
-    }
-    .wrap{max-width:1200px; margin:0 auto; padding:16px}
-    h1{font-size: clamp(1.1rem, 1.5vw + 1rem, 1.8rem); margin:0; letter-spacing:.3px}
-    .sub{color: var(--muted); font-size:.95rem; margin-top:6px}
-
-    .grid{display:grid; gap:14px; padding:18px 16px 32px}
-    @media (min-width:480px){ .grid{ grid-template-columns: repeat(2, 1fr);} }
-    @media (min-width:768px){ .grid{ grid-template-columns: repeat(3, 1fr);} }
-    @media (min-width:1024px){ .grid{ grid-template-columns: repeat(4, 1fr);} }
-
-    .card{
-      background: var(--card);
-      border: 1px solid var(--ring);
-      border-radius: 16px; overflow: hidden;
-      transition: transform .16s ease, box-shadow .16s ease, border-color .16s ease;
-    }
-    .card:hover{ transform: translateY(-2px); border-color: color-mix(in oklab, var(--ring), var(--accent) 25%); box-shadow: 0 10px 30px rgba(0,0,0,.25)}
-    .thumb{ display:block; aspect-ratio: 16/10; width:100%; object-fit: cover; background:#0a0a0a }
-    .title{ margin:10px 12px 12px; font-size:.98rem; line-height:1.35; color: var(--text)}
-
-    .skeleton{ position:relative; overflow:hidden; }
-    .skeleton::after{
-      content:""; position:absolute; inset:0; 
-      background: linear-gradient(100deg, transparent 20%, rgba(255,255,255,.06) 40%, transparent 60%);
-      animation: shimmer 1.2s infinite;
-    }
-    @keyframes shimmer{ 0%{ transform: translateX(-100%)} 100%{ transform: translateX(100%)} }
-
-    .footer{ text-align:center; color: var(--muted); padding: 8px 16px 24px }
-    a{ color: inherit; text-decoration: none }
-    .btn{display:inline-flex; align-items:center; gap:8px; border:1px solid var(--ring); padding:8px 12px; border-radius:999px}
-    .btn:hover{ border-color: color-mix(in oklab, var(--ring), var(--accent) 40%) }
+    :root{--bg:#0b0c10;--card:#111218;--muted:#8a8f98;--text:#e6e8eb;--accent:#6be675;--ring:#2a2e35}
+    *{box-sizing:border-box} 
+    body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;background:var(--bg);color:var(--text)}
+    .wrap{max-width:1200px;margin:0 auto;padding:16px}
+    h1{font-size:clamp(1.1rem,1.5vw + 1rem,1.8rem);margin:0;letter-spacing:.3px}
+    .sub{color:var(--muted);font-size:.95rem;margin-top:6px}
+    .grid{display:grid;gap:14px;padding:18px 16px 32px}
+    @media(min-width:480px){.grid{grid-template-columns:repeat(2,1fr)}}
+    @media(min-width:768px){.grid{grid-template-columns:repeat(3,1fr)}}
+    @media(min-width:1024px){.grid{grid-template-columns:repeat(4,1fr)}}
+    .card{background:var(--card);border:1px solid var(--ring);border-radius:16px;overflow:hidden;transition:transform .16s ease,box-shadow .16s ease,border-color .16s ease}
+    .card:hover{transform:translateY(-2px);border-color:color-mix(in oklab,var(--ring),var(--accent) 25%);box-shadow:0 10px 30px rgba(0,0,0,.25)}
+    .thumb{display:block;aspect-ratio:16/10;width:100%;object-fit:cover;background:#0a0a0a}
+    .title{margin:10px 12px 12px;font-size:.98rem;line-height:1.35;color:var(--text)}
+    .footer{text-align:center;color:var(--muted);padding:8px 16px 24px}
+    a{color:inherit;text-decoration:none}.btn{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--ring);padding:8px 12px;border-radius:999px}.btn:hover{border-color:color-mix(in oklab,var(--ring),var(--accent) 40%)}
   </style>
 </head>
 <body>
-  <header>
-    <div class="wrap">
-      <h1>Proyectos de ArtStation — pauleal</h1>
-      <p class="sub">Cargando automáticamente la portada de cada proyecto. Haz clic para abrir en ArtStation.</p>
-    </div>
+  <header class="wrap">
+    <h1>Proyectos de ArtStation — pauleal</h1>
+    <p class="sub">Cargando automáticamente la portada de cada proyecto. Haz clic para abrir en ArtStation.</p>
   </header>
 
   <main class="wrap">
@@ -72,52 +39,42 @@
   <script>
     const grid = document.getElementById('grid');
 
-    // Render placeholders
+    // Placeholders mientras carga
     const PLACEHOLDERS = 8;
-    for (let i = 0; i < PLACEHOLDERS; i++) {
-      const ph = document.createElement('div');
-      ph.className = 'card';
-      ph.innerHTML = `<div class="thumb skeleton"></div><div class="title skeleton" style="height: 16px; margin: 12px"></div>`;
+    for(let i=0;i<PLACEHOLDERS;i++){
+      const ph=document.createElement('div'); ph.className='card';
+      ph.innerHTML=`<div class="thumb" style="background:#222;height:120px"></div><div class="title" style="height:16px;margin:12px;background:#333"></div>`;
       grid.appendChild(ph);
     }
 
-    function imageFrom(project) {
-      const cover = project.cover || {};
-      return cover.image_url || cover.medium_image_url || cover.small_image_url || cover.url || project.cover_url || '';
+    function imageFrom(project){
+      const cover=project.cover||{};
+      return cover.image_url||cover.medium_image_url||cover.small_image_url||cover.url||project.cover_url||'';
     }
 
-    function renderProjects(projects) {
-      grid.innerHTML = '';
-      for (const p of projects) {
-        const img = imageFrom(p);
-        const link = p.permalink || p.url || `https://www.artstation.com/artwork/${p.hash_id || ''}`;
-        const title = (p.title || 'Proyecto sin título').replace(/</g, '&lt;').replace(/>/g, '&gt;');
-        const card = document.createElement('a');
-        card.href = link;
-        card.target = '_blank';
-        card.rel = 'noopener';
-        card.className = 'card';
-        card.innerHTML = `
-          <img class="thumb" loading="lazy" decoding="async" src="${img}" alt="${title}" />
-          <div class="title">${title}</div>
-        `;
+    function renderProjects(projects){
+      grid.innerHTML='';
+      for(const p of projects){
+        const img=imageFrom(p);
+        const link=p.permalink||p.url||`https://www.artstation.com/artwork/${p.hash_id||''}`;
+        const title=(p.title||'Proyecto sin título').replace(/</g,'&lt;').replace(/>/g,'&gt;');
+        const card=document.createElement('a'); 
+        card.href=link; card.target='_blank'; card.rel='noopener'; card.className='card';
+        card.innerHTML=`<img class="thumb" loading="lazy" decoding="async" src="${img}" alt="${title}"/><div class="title">${title}</div>`;
         grid.appendChild(card);
       }
     }
 
-    async function loadAll() {
-      try {
-        const res = await fetch('/api/artstation');
-        const data = await res.json();
-        const projects = Array.isArray(data.data) ? data.data : [];
-        if (!projects.length) {
-          grid.innerHTML = '<p style="color: var(--muted)">No se encontraron proyectos.</p>';
-          return;
-        }
+    async function loadAll(){
+      try{
+        const res=await fetch('/api/artstation');
+        const data=await res.json();
+        const projects=Array.isArray(data.data)?data.data:[];
+        if(!projects.length){grid.innerHTML='<p style="color: var(--muted)">No se encontraron proyectos.</p>';return;}
         renderProjects(projects);
-      } catch (err) {
+      }catch(err){
         console.error(err);
-        grid.innerHTML = `<p style="color:#f88">Error al cargar proyectos (${err.message}). Asegúrate de desplegar la función /api/artstation correctamente en Vercel.</p>`;
+        grid.innerHTML=`<p style="color:#f88">Error al cargar proyectos (${err.message}). Asegúrate de desplegar la función /api/artstation correctamente en Vercel.</p>`;
       }
     }
 
